Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45930

"White" semi-transparent models when using Qt3D via Scene3D element

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.5.0 Alpha
    • Qt3D
    • None
    • 192f49ead0201f87d8baf93462f035ccbff6c22b

      Semi-transparent entities are looking differently when I use Qt3D via Scene3D element instead of just Qt3D(see the pictures).
      To reproduce it - just open enclosed project and comment/uncomment code in main.cpp to use only Qt3D or Qt3D via Scene3D element

        1. TransparencyTest.tar
          40 kB
          Adam Grzybowski
        2. transparencyQt3D1.png
          43 kB
          Adam Grzybowski
        3. transparencyQt3D2.png
          38 kB
          Adam Grzybowski
        4. transparencyScene3D1.png
          45 kB
          Adam Grzybowski
        5. transparencyScene3D2.png
          35 kB
          Adam Grzybowski
        6. transparencyScene3D_dark1.png
          42 kB
          Adam Grzybowski
        7. transparencyScene3D_dark2.png
          32 kB
          Adam Grzybowski
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lemire_p Paul Lemire
            Adam G Adam Grzybowski
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes