Scene3D rendered with custom FBO node to handle premultiplied alpha

Task-number: QTBUG-45930
Change-Id: I04d1d52f82efd92a70dc99a0353553209cda6b68
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>